--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadowrun-interface",
-  "version": "0.1.0",
+  "version": "0.89.0-beta",
   "private": true,
   "scripts": {
     "dev": "next dev",
